--- a/src/assets/scss/posts.scss
+++ b/src/assets/scss/posts.scss
@@ -37,7 +37,6 @@
   border-radius: 0.4rem;
   color: $blue;
   font-size: 1rem;
-  margin-right: 0.2rem;
   padding: 0.2rem 0.4rem;
   text-decoration: none;
   transition: background 0.2s ease;
